# Research-Paper-Curator-Agentic-RAG-Project-

./: .gitignore  Dockerfile  README.md  alembic.ini  app.py  compose.yml  config.yaml  ingest_daily.py  pyproject.toml  test_port_bind.py  test_qdrant_client.py
.github/workflows/: ci.yml
airflow/dags/: arxiv_paper_ingestion.py  daily_arxiv_briefing.py
alembic/: env.py
alembic/versions/: 20260619_0000_001_initial_initial_schema.py  20260620_001_add_content_hash.py  20260620_002_add_conversations.py  20260620_1755_e6439f05a0d6_merge_multiple_heads.py  20260621_003_add_briefings_and_interests.py  20260627_004_add_users_collections_annotations.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
k8s/: api-deployment.yaml  opensearch-statefulset.yaml  postgres-statefulset.yaml  redis-deployment.yaml
prometheus/: prometheus.yml
scratch/: generate_dev_key.py  test_papers_no_key.py  test_papers_valid.py
src/: config.py  database.py  dependencies.py  gradio_app.py  logging_config.py  main.py  middlewares.py  openapi_config.py
src/antigravity_rag/: __init__.py  backend_api.py  config_parser.py  db_qdrant.py  db_sqlite.py  ingestion.py  local_embeddings.py  ollama_chat.py  pdf_server.py  search_engine.py  supervisor.py
src/db/: factory.py
src/evaluation/: __init__.py  ragas_evaluator.py
src/graphql/: schema.py
src/models/: __init__.py  annotation.py  collection.py  conversation.py  paper.py  researcher.py  user.py
src/repositories/: annotation.py  collection.py  conversation.py  paper.py
src/routers/: __init__.py  admin.py  agentic_ask.py  annotations.py  ask.py  bulk.py  citations.py  collections.py  evaluation.py  export.py  hybrid_search.py  literature.py  papers.py  ping.py  recommendations.py  related.py  review.py  summarize.py  sync.py  trends.py  users.py  visual_search.py  ws.py
src/schemas/: __init__.py
src/scripts/: arxiv_ingest.py  backup_restore.py  ingest_papers.py  prerender_pages.py
src/services/: circuit_breaker.py  conversation_memory.py  cost_tracker.py  knowledge_graph.py  llm_protocol.py  metadata_fetcher.py  metrics.py  multimodal.py  paper_sync.py  (+4 more)
static/: analytics.js  auth.html  chat.html  evaluation.html  index.css  index.html  index.js
tests/: conftest.py
(+108 files in other folders)
